Change overflow:hidden to position:fixed

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -172,7 +172,7 @@ button:hover, .button:hover {
 
 /* no-scroll when mobile navigation is open */
 .no-scroll{
-    overflow: hidden;
+    position: fixed;
 }
 
 .header nav {
